syntax = "proto3";

package trip;
option go_package = "shared/proto/trip;trip";

service TripService {
    rpc PreviewTrip(PreviewTripRequest) returns (PreviewTripResponse);
}

message Coordinate {
    double latitude = 1;
    double longitude = 2;
}

message PreviewTripRequest {
    string riderID = 1;
    Coordinate pickup = 2;
    Coordinate destination = 3;
}

message Geometry {
    repeated Coordinate coordinates = 1;
}

message Route {
    repeated Geometry geometry = 1;
    double distance = 2;
    double duration = 3;
}

message RideFare {
    string id = 1;
    string riderID = 2;
    string packageSlug = 3;
    double totalFareInRupees = 4;
}

message PreviewTripResponse {
    string tripID = 1;
    Route route = 2;
    repeated RideFare rideFare = 3;
}

